[package]
name = "if-newer"
version = "0.0.0"
edition = "2021"
description = "runs commands when a file is newer than another"
license = "MIT"
repository = "https://github.com/soenkehahn/if-newer"

[dev-dependencies]
anyhow = "1.0.53"
colored = "2.0.0"
cradle = "0.2.1"
executable-path = "1.0.0"
pretty_assertions = "1.0.0"
tempfile = "3.3.0"
